--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "url": "git+https://github.com/HTSagara/fragments.git"
   },
   "author": "Henrique Toshio Sagara",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "devDependencies": {
+    "prettier": "3.2.5"
+  }
 }
