--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "markdown-it": "^14.1.0",
     "passport": "^0.7.0",
     "passport-http-bearer": "^1.0.1",
+    "path": "^0.12.7",
     "pino": "^9.0.0",
     "pino-http": "^9.0.0",
     "pino-pretty": "^11.0.0",
